Tests/Negative/ParamShadowsMod.mr
mod Net {}

fun test(Net: i32) {
    Net.connect(); // Net already be i32
}
